# learn-socket

LengthDelimitedCodec/: Cargo.toml
LengthDelimitedCodec/examples/: connect_length.rs
LengthDelimitedCodec/src/: lib.rs
LengthDelimitedCodec/src/msgs/: handshake.rs  message.rs  mod.rs
change-password/: Cargo.toml
change-password/tests/: bcrypt_test_vector.rs  scrypt_test_vector.rs
tcpstream-case/: Cargo.toml
tcpstream-case/examples/: connect.rs  connect_length.rs  connect_line.rs  connect_line_raw.rs  print_each_packet.rs  print_each_packet_length.rs  print_each_packet_line.rs
tcpstream-case/src/: main.rs
