[package]
name = "change-password"
version = "0.1.0"
authors = ["qiuweixuan <924313181@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt-pbkdf = "0.1.0"
scrypt = { version = "0.2", default-features = false }